<package format="2">
  <name>teleop_joy</name>
  <version>0.0.0</version>
  <description>The teleop_joy package</description>
  <maintainer email="barhamfarraj@icloud.com">Farraj007</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>